Working update to electron-forge '^6.4.2', DMG correctly built

--- a/electron/package.json
+++ b/electron/package.json
@@ -18,10 +18,9 @@
     "package": "electron-forge package .",
     "update:image_archive": "./update_image.sh",
     "update:image": "yarn update:image_archive",
-    "make:win": "yarn update:image && electron-forge make -p win32 .",
-    "make:mac": "yarn update:image && electron-forge make -p darwin .",
-    "make:linux": "yarn update:image && electron-forge make -p linux .",
-    "make:win_with_docker": "./makers_docker/make_win.sh make:win",
+    "make:win": "electron-forge make -p win32 .",
+    "make:mac": "electron-forge make -p darwin .",
+    "make:linux": "electron-forge make -p linux .",
     "make": "echo \"Use make:mac, make:linux or make:mac\""
   },
   "repository": "https://github.com/unige-geohealth/accessmod",
@@ -33,14 +32,14 @@
   "author": "Fred Moser",
   "license": "MIT",
   "devDependencies": {
-    "@electron-forge/cli": "^6.0.0-beta.54",
-    "@electron-forge/maker-deb": "^6.0.0-beta.61",
-    "@electron-forge/maker-dmg": "^6.0.0-beta.54",
-    "@electron-forge/maker-flatpak": "^6.0.0-beta.54",
-    "@electron-forge/maker-rpm": "^6.0.0-beta.54",
-    "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
-    "@electron-forge/maker-zip": "^6.0.0-beta.54",
-    "electron": "^11.2.1"
+    "@electron-forge/cli": "^6.4.2",
+    "@electron-forge/maker-deb": "^6.4.2",
+    "@electron-forge/maker-dmg": "^6.4.2",
+    "@electron-forge/maker-flatpak": "^6.4.2",
+    "@electron-forge/maker-rpm": "^6.4.2",
+    "@electron-forge/maker-squirrel": "^6.4.2",
+    "@electron-forge/maker-zip": "^6.4.2",
+    "electron": "^11.5.0"
   },
   "dependencies": {
     "dockerode": "^3.2.1",
@@ -49,6 +48,7 @@
     "electron-store": "^8.0.0",
     "fix-path": "^3.0.0",
     "get-port": "^5.1.1",
+    "macos-alias": "^0.2.11",
     "module-alias": "^2.2.2",
     "node-fetch": "^2.6.6",
     "semver": "^7.3.5",
