--- a/electron/package.json
+++ b/electron/package.json
@@ -1,7 +1,15 @@
 {
-  "name": "accessmod",
-  "version": "5.8.0",
+  "name": "accessmod-desktop",
+  "version": "5.8.1",
+  "author": "Fred Moser",
+  "license": "MIT",
   "description": "AccessMod electron docker launcher app",
+  "repository": "https://github.com/unige-geohealth/accessmod",
+  "keywords": [
+    "accessmod",
+    "docker",
+    "electron"
+  ],
   "main": "app/index.js",
   "build": {
     "appId": "org.accessmod.launcher",
@@ -11,50 +19,6 @@
       "type": "development",
       "category": "public.app-category.education"
     }
-  },
-  "scripts": {
-    "start": "electron-forge start .",
-    "start:debug": "electron-forge start --inspect-electron .",
-    "package": "electron-forge package .",
-    "update:image_archive": "./update_image.sh",
-    "update:image": "yarn update:image_archive",
-    "make:win": "electron-forge make -p win32 .",
-    "make:mac": "electron-forge make -p darwin .",
-    "make:linux": "electron-forge make -p linux .",
-    "make": "echo \"Use make:mac, make:linux or make:mac\""
-  },
-  "repository": "https://github.com/unige-geohealth/accessmod",
-  "keywords": [
-    "accessmod",
-    "docker",
-    "electron"
-  ],
-  "author": "Fred Moser",
-  "license": "MIT",
-  "devDependencies": {
-    "@electron-forge/cli": "^6.4.2",
-    "@electron-forge/maker-deb": "^6.4.2",
-    "@electron-forge/maker-dmg": "^6.4.2",
-    "@electron-forge/maker-flatpak": "^6.4.2",
-    "@electron-forge/maker-rpm": "^6.4.2",
-    "@electron-forge/maker-squirrel": "^6.4.2",
-    "@electron-forge/maker-zip": "^6.4.2",
-    "electron": "^11.5.0"
-  },
-  "dependencies": {
-    "dockerode": "^3.2.1",
-    "electron-dynamic-prompt": "^1.0.3",
-    "electron-squirrel-startup": "^1.0.0",
-    "electron-store": "^8.0.0",
-    "fix-path": "^3.0.0",
-    "get-port": "^5.1.1",
-    "macos-alias": "^0.2.11",
-    "module-alias": "^2.2.2",
-    "node-fetch": "^2.6.6",
-    "semver": "^7.3.5",
-    "stream-to-promise": "^3.0.0",
-    "unload": "^2.3.1",
-    "yaml": "^2.0.0-3"
   },
   "config": {
     "forge": {
@@ -85,5 +49,41 @@
         }
       ]
     }
+  },
+  "scripts": {
+    "start": "electron-forge start .",
+    "start:debug": "electron-forge start --inspect-electron .",
+    "package": "electron-forge package .",
+    "update:image_archive": "./update_image.sh",
+    "update:image": "yarn update:image_archive",
+    "make:win": "electron-forge make -p win32 .",
+    "make:mac": "electron-forge make -p darwin .",
+    "make:linux": "electron-forge make -p linux .",
+    "make": "echo \"Use make:mac, make:linux or make:mac\""
+  },
+  "devDependencies": {
+    "@electron-forge/cli": "^6.4.2",
+    "@electron-forge/maker-deb": "^6.4.2",
+    "@electron-forge/maker-dmg": "^6.4.2",
+    "@electron-forge/maker-flatpak": "^6.4.2",
+    "@electron-forge/maker-rpm": "^6.4.2",
+    "@electron-forge/maker-squirrel": "^6.4.2",
+    "@electron-forge/maker-zip": "^6.4.2",
+    "electron": "^11.5.0"
+  },
+  "dependencies": {
+    "dockerode": "^3.2.1",
+    "electron-dynamic-prompt": "^1.0.3",
+    "electron-squirrel-startup": "^1.0.0",
+    "electron-store": "^8.0.0",
+    "fix-path": "^3.0.0",
+    "get-port": "^5.1.1",
+    "macos-alias": "^0.2.11",
+    "module-alias": "^2.2.2",
+    "node-fetch": "^2.6.6",
+    "semver": "^7.3.5",
+    "stream-to-promise": "^3.0.0",
+    "unload": "^2.3.1",
+    "yaml": "^2.0.0-3"
   }
 }
