--- a/electron/package.json
+++ b/electron/package.json
@@ -1,9 +1,9 @@
 {
   "name": "accessmod-desktop",
-  "version": "5.8.1",
   "author": "Fred Moser",
-  "license": "MIT",
+  "version": "5.8.1",
   "description": "AccessMod electron docker launcher app",
+  "license": "MIT",
   "repository": "https://github.com/unige-geohealth/accessmod",
   "keywords": [
     "accessmod",
@@ -13,75 +13,49 @@
   "main": "app/index.js",
   "build": {
     "appId": "org.accessmod.launcher",
-    "productName": "AccessMod",
+    "productName": "AccessMod Desktop",
     "copyright": "Copyright © 2021 - 2024 F.Moser / UNIGE / OMS",
+    "directories": {
+      "buildResources": "app/icons",
+      "output": "dist"
+    },
+    "files": [
+      "app/**/*",
+      "package.json"
+    ],
     "mac": {
-      "type": "development",
-      "category": "public.app-category.education"
-    }
-  },
-  "config": {
-    "forge": {
-      "packagerConfig": {
-        "icon": "./app/icons/icon"
-      },
-      "makers": [
-        {
-          "name": "@electron-forge/maker-squirrel",
-          "config": {
-            "name": "accessmod"
-          }
-        },
-        {
-          "name": "@electron-forge/maker-deb",
-          "config": {
-            "options": {
-              "maintainer": "Fred Moser",
-              "homepage": "https://github.com/unige-geohealth/accessmod"
-            }
-          }
-        },
-        {
-          "name": "@electron-forge/maker-dmg",
-          "config": {
-            "format": "ULFO"
-          }
-        }
-      ]
+      "category": "public.app-category.education",
+      "icon": "icon.icns"
+    },
+    "win": {
+      "icon": "icon.ico"
+    },
+    "linux": {
+      "icon": "icons"
     }
   },
   "scripts": {
-    "start": "electron-forge start .",
-    "start:debug": "electron-forge start --inspect-electron .",
-    "package": "electron-forge package .",
-    "update:image_archive": "./update_image.sh",
-    "update:image": "yarn update:image_archive",
-    "make:win": "electron-forge make -p win32 .",
-    "make:mac": "electron-forge make -p darwin .",
-    "make:linux": "electron-forge make -p linux .",
-    "make": "echo \"Use make:mac, make:linux or make:mac\""
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder",
+    "start": "electron .",
+    "start:debug": "electron --inspect=9229 .",
+    "update:image_archive": "./update_image.sh"
   },
   "devDependencies": {
-    "@electron-forge/cli": "^6.4.2",
-    "@electron-forge/maker-deb": "^6.4.2",
-    "@electron-forge/maker-dmg": "^6.4.2",
-    "@electron-forge/maker-flatpak": "^6.4.2",
-    "@electron-forge/maker-rpm": "^6.4.2",
-    "@electron-forge/maker-squirrel": "^6.4.2",
-    "@electron-forge/maker-zip": "^6.4.2",
-    "electron": "^11.5.0"
+    "electron": "^29.1.5",
+    "electron-builder": "^24.13.3"
   },
   "dependencies": {
-    "dockerode": "^3.2.1",
+    "dockerode": "^4.0.0",
     "electron-dynamic-prompt": "^1.0.3",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^8.0.0",
-    "fix-path": "^3.0.0",
-    "get-port": "^5.1.1",
+    "fix-path": "^4.0.0",
+    "get-port": "^7.0.0",
     "macos-alias": "^0.2.11",
     "module-alias": "^2.2.2",
-    "node-fetch": "^2.6.6",
-    "semver": "^7.3.5",
+    "node-fetch": "^3.0.0",
+    "semver": "^7.0.0",
     "stream-to-promise": "^3.0.0",
     "unload": "^2.3.1",
     "yaml": "^2.0.0-3"
