--- a/.github/workflows/electron.yml
+++ b/.github/workflows/electron.yml
@@ -27,8 +27,11 @@ jobs:
         with:
           node-version: 18.x
 
-      - name: Install Docker
-        uses: docker/setup-buildx-action@v1
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Update Image
         working-directory: ./electron
