--- a/.github/workflows/electron.yml
+++ b/.github/workflows/electron.yml
@@ -27,13 +27,13 @@ jobs:
         with:
           node-version: 18.x
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Update Image
+      - name: Use docker 
+        uses: actions-hub/docker/cli@master
+        env:
+          SKIP_LOGIN: true
+
+      - name: Update image
         working-directory: ./electron
         run: ./update_image.sh
         shell: bash
@@ -44,7 +44,7 @@ jobs:
       - name: Build Electron App
         uses: samuelmeuli/action-electron-builder@v1
         with:
-          electron_version: 29.1.5 
+          electron_version: 29.1.5
           package_root: ./electron/
           build_command: yarn run dist
           args: --${{ matrix.target }}
