--- a/.github/workflows/electron.yml
+++ b/.github/workflows/electron.yml
@@ -60,6 +60,8 @@ jobs:
         with:
           package_root: ./electron/
           args: --${{ matrix.target }}
+          github_token: ${{ secrets.github_token }}
+          release: ${{ startsWith(github.ref, 'refs/tags/v') }}
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v2
