--- a/.github/workflows/electron.yml
+++ b/.github/workflows/electron.yml
@@ -41,7 +41,7 @@ jobs:
           path: ./electron/app/docker/
 
       - name: Use Node.js 18.x
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v4
         with:
           node-version: 18.x
 
@@ -57,7 +57,7 @@ jobs:
           release: ${{ startsWith(github.ref, 'refs/tags/v') }}
 
       - name: Upload Artifacts
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
-          name: ${{ matrix.os }}-build
-          path: dist/*
+          name: accessmod_desktop_${{ matrix.os }}
+          path: ./electron/dist/*
