--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -46,5 +46,5 @@ jobs:
       - name: Upload OVA
         uses: actions/upload-artifact@v3
         with:
-          name: accessmod_virtual_box
+          name: accessmod-virtualbox
           path: packer/_build
