--- a/.github/workflows/electron.yml
+++ b/.github/workflows/electron.yml
@@ -72,10 +72,10 @@ jobs:
         working-directory: ./electron 
         env :
           GH_TOKEN: ${{ secrets.github_token }}
-        run : yarn run dist-${{ matrix.platform }}-${{ matrix.arch }}
+        run : yarn electron-builder --${{ matrix.platform }} --${{ matrix.arch }}
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: accessmod-desktop-${{ matrix.os }}--${{ matrix.arch }}
+          name: accessmod-desktop-${{ matrix.platform }}-${{ matrix.arch }}
           path: ./electron/dist/*
