--- a/electron_vite/electron-builder.yml
+++ b/electron_vite/electron-builder.yml
@@ -2,7 +2,6 @@ appId: org.accessmod.desktop
 productName: AccessMod Desktop
 directories:
   buildResources: build
-lib:
 files:
   - '!**/.vscode/*'
   - '!src/*'
@@ -14,6 +13,7 @@ asarUnpack:
   - resources/**
 win:
   executableName: AccessMod Desktop
+  icon: build/icon.png
 nsis:
   artifactName: ${name}-${version}-setup.${ext}
   shortcutName: ${productName}
@@ -27,6 +27,7 @@ mac:
   notarize: false
   category: public.app-category.education  
   type: development
+  icon: build/icon.png
 dmg:
   artifactName: ${name}-${version}.${ext}
 linux:
@@ -36,6 +37,7 @@ linux:
     - deb
   maintainer: accessmod.org
   category: Utility
+  icon: build/icon.png
 appImage:
   artifactName: ${name}-${version}.${ext}
 npmRebuild: false
