--- a/electron/package.json
+++ b/electron/package.json
@@ -1,58 +1,35 @@
 {
   "name": "accessmod-desktop",
-  "author": "Fred Moser",
-  "version": "5.8.1",
-  "description": "AccessMod electron docker launcher app",
+  "version": "5.8.2",
+  "description": "AccessMod Desktop : manage accessmod docker images, data and versions.",
+  "main": "./out/main/index.js",
+  "author": "accessmod.org",
   "license": "MIT",
-  "repository": "https://github.com/unige-geohealth/accessmod",
+  "type": "module",
   "keywords": [
     "accessmod",
     "docker",
     "electron"
   ],
-  "main": "app/index.js",
-  "type": "module",
-  "build": {
-    "appId": "org.accessmod.desktop",
-    "productName": "AccessMod Desktop",
-    "copyright": "Copyright © 2021 - 2024 UNIGE / WHO",
-    "directories": {
-      "buildResources": "app/icons",
-      "output": "dist"
-    },
-    "asar": true,
-    "files": [
-      "./app/**/*",
-      "package.json"
-    ],
-    "mac": {
-      "category": "public.app-category.education",
-      "icon": "icon.icns",
-      "type": "development"
-    },
-    "win": {
-      "icon": "icon.ico"
-    },
-    "linux": {
-      "icon": "icons"
-    }
+  "homepage": "https://github.com/unige-geohealth/accessmod",
+  "engines": {
+    "node": ">=18.14.2 <20.0.0"
   },
   "scripts": {
-    "pack": "electron-builder --dir",
-    "dist": "electro-builder",
-    "lint": "eslint .",
-    "start": "electron .",
-    "start:debug": "electron --inspect-brk=9229 .",
-    "update:image_archive": "./update_image.sh"
-  },
-  "devDependencies": {
-    "electron": "^29.1.5",
-    "electron-builder": "^24.13.3",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0"
+    "format": "prettier --write .",
+    "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
+    "start": "electron-vite preview",
+    "dev": "electron-vite --inspect-brk dev",
+    "build": "electron-vite build",
+    "build:unpack": "npm run build && electron-builder --dir",
+    "build:win": "npm run build && electron-builder --win",
+    "build:mac": "npm run build && electron-builder --mac",
+    "build:linux": "npm run build && electron-builder --linux"
   },
   "dependencies": {
-    "dockerode": "^4.0.0",
+    "@electron-toolkit/preload": "^3.0.0",
+    "@electron-toolkit/utils": "^3.0.0",
+    "dockerode": "^4.0.2",
     "electron-dynamic-prompt": "^1.0.3",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^8.0.0",
@@ -64,6 +41,16 @@
     "stream-to-promise": "^3.0.0",
     "unload": "^2.3.1",
     "yaml": "^2.0.0-3"
+  },
+  "devDependencies": {
+    "@electron-toolkit/eslint-config": "^1.0.2",
+    "@electron-toolkit/eslint-config-prettier": "^2.0.0",
+    "electron": "^28.2.0",
+    "electron-builder": "^24.9.1",
+    "electron-vite": "^2.0.0",
+    "eslint": "^8.56.0",
+    "prettier": "^3.2.4",
+    "vite": "^5.0.12"
   },
   "eslintConfig": {
     "env": {
