--- a/.github/workflows/electron.yml
+++ b/.github/workflows/electron.yml
@@ -76,7 +76,7 @@ jobs:
         working-directory: ./electron
         env:
           GH_TOKEN: ${{ secrets.github_token }}
-        run: yarn electron-builder --${{ matrix.platform }} --${{ matrix.arch }}
+        run: yarn electron-builder --${{ matrix.platform }}
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
