--- a/.github/workflows/electron.yml
+++ b/.github/workflows/electron.yml
@@ -13,8 +13,8 @@ jobs:
         include:
           - os: ubuntu-latest
             arch: amd64
-          - os: macos-14
-            arch: arm64
+#         - os: macos-14
+#           arch: arm64
     steps:
       - uses: actions/checkout@v4
       - name: Use docker
@@ -37,17 +37,17 @@ jobs:
     strategy:
       matrix:
         include:
-          - os: macos-14
-            platform: mac
-            arch: arm64
-          - os: macos-12
-            platform: mac
-            arch: amd64
+#          - os: macos-14
+#            platform: mac
+#            arch: arm64
+#          - os: ubuntu-22.04
+#            platform: linux
+#            arch: amd64
+#          - os: macos-12
+#            platform: mac
+#            arch: amd64
           - os: windows-2022
             platform: win
-            arch: amd64
-          - os: ubuntu-22.04
-            platform: linux
             arch: amd64
     steps:
       - uses: actions/checkout@v4
