Electron, still issue with docker permission with snap, try again with deb

--- a/electron/electron-builder.yml
+++ b/electron/electron-builder.yml
@@ -41,7 +41,7 @@ dmg:
   sign : false
 linux:
   target:
-    - snap
+    - deb
   maintainer: accessmod.org
   category: Utility
   icon: build/icon.png
