Electron : export deb

--- a/.github/workflows/electron.yml
+++ b/.github/workflows/electron.yml
@@ -82,5 +82,5 @@ jobs:
           name: accessmod-desktop-${{ matrix.platform }}-${{ matrix.arch }}
           path: |
             ./electron/dist/*.dmg
-            ./electron/dist/*.snap
+            ./electron/dist/*.deb
             ./electron/dist/*-setup.exe
