--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -5,8 +5,11 @@ env:
 
 on:
   workflow_run:
-    workflows: ["am5_docker"]
-    branches: [main]
+    workflows: 
+      - build_docker
+    branches: 
+      - main
+      - staging
     types:
       - completed
 
