--- a/electron/package.json
+++ b/electron/package.json
@@ -1,6 +1,6 @@
 {
   "name": "accessmod-desktop",
-  "version": "5.8.2",
+  "version": "5.8.2-alpha.5",
   "description": "AccessMod Desktop : manage accessmod docker images, data and versions.",
   "main": "./out/main/index.js",
   "author": "accessmod.org",
