Workflow : should fix dependencies between workflows

--- a/.github/workflows/electron.yml
+++ b/.github/workflows/electron.yml
@@ -2,8 +2,7 @@ name: build_electron
 
 on:
   workflow_run:
-    workflows:
-      - build_docker
+    workflows: ["build_docker"]
     types:
       - completed
 
