--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -106,6 +106,9 @@ jobs:
 
       - name: Build with Packer
         working-directory: ./packer
+        env:
+          LOGNAME: github
+          USER: github
         run: packer build -debug -force alpine.pkr.hcl
 
       - name: Upload OVA
