--- a/electron/electron-builder.yml
+++ b/electron/electron-builder.yml
@@ -31,7 +31,7 @@ mac:
   minimumSystemVersion: 12.0.0
   entitlements: resources/entitlements.mac.plist
   entitlementsInherit: resources/entitlements.mac.plist
-  notarize: false
+  notarize: true 
   category: public.app-category.education  
   icon: build/icon.png
   target: 
