--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,7 +76,7 @@ jobs:
   # |  __/\_____|\____)_| \_)_____)_|    
   # |_|
   packer:
-    runs-on: macos-13
+    runs-on: ubuntu
     needs: docker
     name: Build VirtualBox ova
     steps:
@@ -84,8 +84,12 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install VirtualBox
-        run: 
-          brew install --cask virtualbox
+        run: |
+          wget -q https://www.virtualbox.org/download/oracle_vbox_2016.asc -O- | sudo apt-key add -
+          wget -q https://www.virtualbox.org/download/oracle_vbox.asc -O- | sudo apt-key add -
+          sudo add-apt-repository "deb http://download.virtualbox.org/virtualbox/debian $(lsb_release -cs) contrib"
+          sudo apt-get update
+          sudo apt-get install -y virtualbox-7.0
 
       - name: Setup Packer
         uses: hashicorp/setup-packer@main
